--- a/Konex/styles.css
+++ b/Konex/styles.css
@@ -110,7 +110,7 @@ nav li {
     color: var(--principal_2);
     font-size: 25px;
     margin-top: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 .info-eventos{
@@ -136,7 +136,7 @@ nav li {
     font-family: 'Inter', sans-serif;
     font-weight: 600;
     margin: 10px;
-    font-size: 15px;
+    font-size: 20px;
     color: var(--principal_2);
     font-weight: 900;
 }
@@ -255,33 +255,108 @@ footer div{
     margin-bottom: 20px;
 }
 
+
+footer{
+    display: flex;
+    justify-content: space-between;
+}
+
 .content{
     display: flex;
     flex-direction: column;
     text-align: justify;
-    font-family: 'Inter';
     font-size: 15px;
+    margin-left: 10px;
+}
+.content p{
+    font-family: 'Inter', sans-serif;
+}
+.opiniones{
+    padding-bottom: 40px;
 }
 
 #logo-footer img{
     float: left;
-    width: 200px;
+    width: 190px;
     height: 50px;
-    margin-top: 15px;
-    margin-left: 0;
+    margin-top: 10px;
 }
 
 .redes{
     display: flex; 
-    flex-direction: column;  
+    flex-direction: column;
+    margin-top: 30px;
 }
 
 .redes img{
-    height: 10px;
-    width: 10px;
-    
+    height: 40px;
+    width: 40px;
+    padding: 3px;
 }
 
 
 
 /*TERMINA ESTILOS GENERALES FOOOTER*/
+
+
+@media only screen and ( max-width: 780px ) {
+    header{
+     padding-bottom: 20px;
+    }
+    nav ul li a{
+        font-size: 13px;
+        margin-right: 10px;
+    }
+    #logo{
+        height: 70px;
+        width: 50px;
+    }
+    #logo img{
+        height: 50px;
+        width: 260px;
+    }
+    .contenedor{
+        width: 100%;
+    }
+    header li{
+     padding: 0px 0px 0px 0px;
+    }
+    header a{
+     padding: 5px 5px;
+    }
+    .titulo h1{
+        font-size: 45px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+    .container {
+        width: 91%; /* Cambiar el ancho para ajustarse al tamaño máximo */
+    }
+    ul.slider {
+        max-height: 200px; /* Cambiar la altura máxima para la imagen del slider */
+    }
+    ul.slider li img {
+        max-height: 200px; /*s Cambiar la altura máxima para la imagen del slider */
+        object-fit:contain;
+    }
+    .info-eventos{
+        flex-direction: column;
+        text-align: center;
+
+    }
+    .info-eventos h3{
+        margin: 0;
+        padding-bottom: 60px;
+        font-size: 20px;
+    }
+
+    .line{
+        width: 0;
+        padding: 0;
+        margin: 0;
+    }
+    .redes{
+        padding: 15px;
+    }
+
+}
